--- a/app/views/admin/sales/index.html.erb
+++ b/app/views/admin/sales/index.html.erb
@@ -1,4 +1,6 @@
-<h2>Sales</h2>
+<div class="page-header">
+<h2>All Sales</h2>
+</div>
 
 <table class="table table-bordered table-striped table-hover">
   <thead>
@@ -39,7 +41,7 @@
       </td>
 
       <td>
-        <a class="btn btn-warning btn-small" href="#">Edit</a>
+        <a class="btn btn-warning btn-small" href="<%= edit_admin_sale_path(sale) %>">Edit</a>
         <a class="btn btn-danger btn-small" href="#">Delete</a>
       </td>
     </tr>
