--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,6 @@
-<h2>Users</h2>
+<div class="page-header">
+<h2>All Users</h2>
+</div>
 
 <table class="table table-bordered table-striped table-hover">
   <thead>
