--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -14,6 +14,7 @@
     <link href="/admin/admin-bootstrap-responsive.min.css" rel="stylesheet">
     <link href="/admin/admin-bootswatch.css" rel="stylesheet">
 
+    <%= javascript_include_tag "application" %>
   </head>
 
   <body class="preview" data-spy="scroll" data-target=".subnav" data-offset="80">
