--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-<h2>All Users</h2>
+<h1>All Users</h1>
 </div>
 
 <table class="table table-bordered table-striped table-hover">
@@ -9,7 +9,8 @@
       <th>Email</th>
       <th>City</th>
       <th>Joined</th>
-      <th>Posted</th>
+      <th>Posts</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -20,6 +21,10 @@
       <td><%= user.city.name %></td>
       <td><%= user.created_at.strftime("%d %b %Y") %>
       <td><%= user.sales.size %></td>
+      <td>
+        <%= link_to 'View', admin_user_path(user),
+          :class => "btn btn-danger btn-small" %>
+      </td>
     </tr>
   <% end %>
   </tbody>
