--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,17 +1,34 @@
-<% if flash[:message] %>
-<div class="alert alert-success">
- <%= flash[:message] %>.
+<div class="page-header">
+  <h1><%= @user.first_name %> <%= @user.last_name %></h1>
 </div>
-<% end %>
+
+<p>
+  <img src="<%= @user.photo.versions[:profile] %>">
+<p>
+
+<p>
+<%= @user.city.name %>
+</p>
+<p>
+Joined <%= @user.created_at.strftime("%b %d, %Y") %>.
+</p>
+
+<p>
+  <a href="mailto:<%= @user.email %>"><%= @user.email %></a>
+</p>
+
 
 <div class="page-header">
-<h1>All Sales</h1>
+  <h3>Posts</h3>
 </div>
+
+<% if @user.sales.empty? %>
+  <p> No posts.</p>
+<% else %>
 
 <table class="table table-bordered table-striped table-hover">
   <thead>
     <tr>
-      <th>User</th>
       <th>Store</th>
       <th>City</th>
       <th>Brand</th>
@@ -21,13 +38,8 @@
     </tr>
   </thead>
   <tbody>
-  <% @sales.each do |sale| %>
+  <% @user.sales.each do |sale| %>
     <tr>
-      <td>
-        <% if sale.user %>
-        <%= sale.user.first_name %> <%= sale.user.last_name %>
-        <% end %>
-      </td>
       <td>
         <%= sale.store_name %>
       </td>
@@ -45,7 +57,6 @@
       <td>
         <%= sale.created_at.strftime("%d %b %Y") %>
       </td>
-
       <td>
         <a class="btn btn-warning btn-small" href="<%= edit_admin_sale_path(sale) %>">Edit</a>
         <%= link_to 'Delete', admin_sale_path(sale),
@@ -53,10 +64,10 @@
           :method => :delete,
           :class => "btn btn-danger btn-small" %>
       </td>
-    </tr>
+    </tr> 
   <% end %>
   </tbody>
 </table>
 
+<% end %>
 
-<%= paginate @sales %>
