--- a/app/views/admin/sales/edit.html.erb
+++ b/app/views/admin/sales/edit.html.erb
@@ -1,12 +1,13 @@
+<% if @message %>
+<div class="alert alert-success">
+ <%= @message %>
+</div>
+<% end %>
+
+
 <div class="page-header">
   <h1>Edit Sale</h1>
 </div>
-
-<% if @message %>
-<div class="alert alert-success">
- <%= @message %>.
-</div>
-<% end %>
 
 <h3>
 Posted by 
