--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -23,7 +23,7 @@
       <td><%= user.sales.size %></td>
       <td>
         <%= link_to 'View', admin_user_path(user),
-          :class => "btn btn-danger btn-small" %>
+          :class => "btn btn-info btn-small" %>
       </td>
     </tr>
   <% end %>
