--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -18,7 +18,7 @@
     <tr>
       <td><%= user.first_name %> <%= user.last_name %></td>
       <td><%= user.email %></td>
-      <td><%= user.city.name %></td>
+      <td><%= user.city.name if user.city %></td>
       <td><%= user.created_at.strftime("%d %b %Y") %>
       <td><%= user.sales.size %></td>
       <td>
