capture and export leads stuff

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -36,6 +36,9 @@
           <li><a href="/admin/users">Users</a></li>
           <li><a id="" href="/admin/sales">Sales</a></li>
         </ul>
+        <ul class="nav pull-right" id="main-menu-right">
+          <li><a rel="tooltip" target="_blank" href="/admin/leads">Export Leads</a></li>
+        </ul>
        </div>
      </div>
    </div>
