--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -16,7 +16,10 @@
   <tbody>
   <% @users.each do |user| %>
     <tr>
-      <td><%= user.first_name %> <%= user.last_name %></td>
+      <td>
+        <%= link_to "#{user.display_name}",
+                    admin_user_url(user) %>
+      </td>
       <td><%= user.email %></td>
       <td><%= user.city.name if user.city %></td>
       <td><%= user.created_at.strftime("%d %b %Y") %>
