--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,6 +59,13 @@
     
     <%= yield %>
 
+    <div id="footer">
+	    <div class="container">
+		    <div align="center">
+	        <a href="FAQ.html">FAQ</a> | <a href="tos.html">Terms of Service</a> | <a href="privacy.html">Privacy</a></p>
+	      </div>
+	    </div>
+	  </div>
 
     <script src="/assets/jquery.js"></script>
     <script src="/assets/bootstrap.min.js"></script>
