--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -37,7 +37,7 @@
 		
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><%= link_to "Join", new_user_url %></li>
+              <li><%= link_to "Join", register_url %></li>
               <li><%= link_to "Login", new_session_url %></li>
               <li><%= link_to "Merchants", "" %></li>
             </ul>
