--- a/app/views/merchants/new.html.erb
+++ b/app/views/merchants/new.html.erb
@@ -1,65 +1,127 @@
-   <style>
+  <script>
+function validateAndSubmit() {
+
+      if ($('#retail_category').val() == "Choose a category") {
+        alert("Please select a retail category.");
+        return false;
+      }
+
+      if (!$("#email")[0].value.match(".@.")) {
+        alert("Please provide a valid email address.");
+        return false;
+      }
+
+      if ($("#first_name").val().length < 1) {
+        alert("Please provide your first name.");
+        return false;
+      }
+
+      if ($("#last_name").val().length < 1) {
+        alert("Please provide your last name.");
+        return false;
+      }
+
+
+      if ($("#passwd_clear").val().length < 4) {
+        alert("Your password must be at least 4 characters");
+        return false;
+      }
+
+      if ($("#passwd_clear").val() != $("#passwd_confirm").val()) {
+        alert("Your passwords don't match.");
+        return false;
+      }
+
+      
+      if ($("#business_name").val().length < 1) {
+        alert("Please provide your business name.");
+        return false;
+      }
+
+      if ($("#custom_slug").val().length < 1) {
+        alert("Please provide a custom MySaleTable URL.");
+        return false;
+      }
+    }
+    </script>
+
+<style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
+
+    <%= form_tag({:controller => "merchants",
+                  :action => "create" },
+                  :multipart => true) do %>
 
 <div class="container">
 		<div class="marketing">
 			<div class="signup-unit">
 				  <fieldset>
 				    <legend>Create a Merchant Account </legend>
-				<span class="inline-help">&#160;Retail Type&#160;</span>
-					<select class="retail-type">
-						  <option>Choose a retail category</option>
-						  <option>Wardrobe</option>
-						  <option>Home</option>
-						  <option>Kitchen</option>
-						  <option>Gift</option>
-						  <option>Pet</option>
-						</select>
+
+  <% if @error_message %>
+    <div class="alert alert-error">  
+      <%= @error_message %>
+    </div>
+  <% end %>
+
+            <span class="inline-help">&#160;Retail Type&#160;</span>
+
+            <%= select_tag("retail_category",
+                           options_for_select(["Choose a category", "Wardrobe", "Home", "Kitchen", "Gift", "Pet"], params[:retail_category]),
+                           :class => "retail-type") %>
 						<hr>
             <span class="inline-help">&#160;Contact Name</span><br/>
-						  <input type="text" class="input-medium" placeholder="First Name">
-						  <input type="password" class="input-medium" placeholder="Last Name"><br>
+            <%= text_field_tag("first_name", params[:first_name], :class => "input-medium", :placeholder => "First Name") %>
+            <%= text_field_tag("last_name", params[:last_name], :class => "input-medium", :placeholder => "Last Name") %>
+            <br>
 				<hr>
 				<span class="inline-help">&#160;Email Address</span><br>
-			<input type="email" class="input-medium" placeholder="Email"><br><hr>
+        <%= text_field_tag("email", params[:email], :class => "input-medium", :placeholder => "Email" )%>
+			  <br><hr>
 			<span class="inline-help">&#160;Password</span><br>
-			<input type="password" class="input-medium" placeholder="Password"><br>
+      <%= password_field_tag("passwd_clear", params[:passwd_clear], :class => "input-medium", :placeholder => "Password") %>
+      <br>
       <hr>
 			<span class="inline-help">&#160;Confirm Password</span><br>
-			<input type="password" class="input-medium" placeholder="Confirm Password"><br>
-      <br><br>
-      			
+      <%= password_field_tag("passwd_confirm", params[:passwd_confirm], :class => "input-medium", :placeholder => "Confirm Password") %>
+      <br>
+      <br>
+      <br>
+      
 			  <fieldset>
 			    <legend>Profile (shown publicly)</legend>
 			</fieldset>
-			<span class="inline-help">&#160;Business Name</span><br>
-			    <input type="text" class="input-medium"><br>
+      <span class="inline-help">&#160;Business Name</span><br>
+      <%= text_field_tag("business_name", params[:business_name], :class => "input-medium" )%>
+      <br>
           <hr>
 				Your custom URL<br>
 				<div class="input-prepend">
 				  <span class="add-on">http://www.mysaletable.com/</span>
-				  <input class="span2" id="prependedInput" type="text" placeholder="Custom">
+          <%= text_field_tag("custom_slug", params[:custom_slug], :class => "span2", :placeholder => "Custom") %>
         </div><hr>
 				
 
         <span class="inline-help">&#160;Profile Photo</span><br/>
-        
 
-			<img data-src="holder.js/260x180" alt="" style="width: 260px; height: 180px;" ><br><br>
-			<a class="btn" href="">Upload Profile Image</a>
+        <%= file_field_tag("photo", :id => "photo_file_field") %>
+        <br/>
       <hr>
 			
-			<span class="bio">About</span><br>
-		<textarea data-provide="limit" data-counter="#counter" placeholder="Enter text (150 character limit)"rows="3"></textarea><br>
+      <span class="bio">About</span><br>
+
+      <%= text_area_tag "bio", params[:bio], :placeholder => "Enter text (150 character limit)", :rows => "3" %>
+      <br>
 		<hr>
 		
 
 	<span class="inline-help">&#160;Website</span> <br>
-	<input type="text" class="input-large" placeholder="ex: yourwebsite.com">
-	<button type="submit" class="btn btn-success pull-right">Create Account</button>
+
+  <%= text_field_tag "website_url", params[:website_url], :class => "input-large", :placeholder => "ex: yourwebsite.com" %>
+	<button type="submit" class="btn btn-success pull-right" onclick="return validateAndSubmit();">Create Account</button>
 	<br>
 	
 	
@@ -74,3 +136,4 @@
 	</div>
 	</div>
 
+<% end %>
