sales on profile

--- a/app/views/sales/_sale_modal.html.erb
+++ b/app/views/sales/_sale_modal.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div class="modal-body">
-    <%= render :partial => "sale_detail", :locals => {:sale => sale} %>
+    <%= render :partial => "sales/sale_detail", :locals => {:sale => sale} %>
   </div>
 
   <div class="modal-footer">
