--- a/app/views/sales/_sales.html.erb
+++ b/app/views/sales/_sales.html.erb
@@ -42,5 +42,5 @@
 
 
     <% @sales.each do |sale| %>
-      <%= render :partial => "sale_modal", :locals => {:sale => sale} %>
+      <%= render :partial => "sales/sale_modal", :locals => {:sale => sale} %>
     <% end %>
