--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -78,12 +78,12 @@
     <a href="purchase.html" class="btn btn-success btn-large span4 pull-right">Buy</a>
     <% end %>
 
-    <a href="<%= user_url(sale.user.id) %>">
+    <a href="<%= user_custom_slug_url(sale.user) %>">
       
       <img class="img-polaroid" src="<%= sale.user.photo.versions[:feed_2x] %>" height="60" width="60px">
     </a>
     <br>
-    <a href="<%= user_url(sale.user.id) %>"><b><%= sale.user.display_name %></b></a>
+    <a href="<%= user_custom_slug_url(sale.user) %>"><b><%= sale.user.display_name %></b></a>
     <br>
     <p class="muted time"><%= sale.user.city.name %></p>
     <span class="btn pull-right span12">Follow</span><br><br><br>
