--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
               <li><a href="upload.html"><i class="icon-upload"></i>&#160;Upload</a></li>
               <li><a href="about.html"><i class="icon-globe"></i>&#160;About</a></li>
               <li><a href="press.html"><i class="icon-comment"></i>&#160;Badges</a></li>
-              <li><a href="profile.html"><i class="icon-picture"></i>&#160;Profile</a></li>
+              <li><a href="<%= edit_user_url("self") %>"><i class="icon-picture"></i>&#160;Profile</a></li>
             </ul>
           </div><!--/.nav-collapse -->
 
